# voxrt-wake-word-linux

./: LICENSE  README.md
examples/c/alsa-mic-quickstart/: Makefile  README.md  main.c
examples/c/alsa-mic-quickstart-cpp/: Makefile  README.md  main.cpp
examples/c/cmake-consumer/: CMakeLists.txt  README.md  main.c
examples/go/quickstart/: README.md  main.go
examples/nodejs/quickstart/: README.md  quickstart.js
examples/python/quickstart/: README.md  quickstart.py
go/: LICENSE-BINARY  README.md  go.mod  voxrt_wake_word.go
go/include/: voxrt_wake_word.h
